spock/gen/SpockParser.py
# Generated from Spock.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SpockParser ( Parser ):

    grammarFileName = "Spock.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'print'", "'return'", "'begin'", "'finish'", 
                     "'declare'", "'define'", "'equals'", "'while'", "'if'", 
                     "'lambda'", "'takes'", "'does'", "'call'", "'and'", 
                     "'set'", "'as'", "'with'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'flush'" ]

    symbolicNames = [ "<INVALID>", "PRINT", "RETURN", "BEGIN", "FINISH", 
                      "DECLARE", "DEFINE", "EQUALS", "WHILE", "IF", "LAMBDA", 
                      "TAKES", "DOES", "CALL", "AND", "SET", "AS", "WITH", 
                      "WORD_NUMBER", "STRING", "NUMBER", "ID_PART", "COMMENT", 
                      "MULTILINE_COMMENT", "WS", "FLUSH" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_printStatement = 2
    RULE_returnStatement = 3
    RULE_block = 4
    RULE_id = 5
    RULE_declaration = 6
    RULE_assignment = 7
    RULE_definition = 8
    RULE_whileLoop = 9
    RULE_ifStatement = 10
    RULE_expression = 11
    RULE_lambda = 12
    RULE_call = 13
    RULE_arglist = 14
    RULE_list = 15

    ruleNames =  [ "program", "statement", "printStatement", "returnStatement", 
                   "block", "id", "declaration", "assignment", "definition", 
                   "whileLoop", "ifStatement", "expression", "lambda", "call", 
                   "arglist", "list" ]

    EOF = Token.EOF
    PRINT=1
    RETURN=2
    BEGIN=3
    FINISH=4
    DECLARE=5
    DEFINE=6
    EQUALS=7
    WHILE=8
    IF=9
    LAMBDA=10
    TAKES=11
    DOES=12
    CALL=13
    AND=14
    SET=15
    AS=16
    WITH=17
    WORD_NUMBER=18
    STRING=19
    NUMBER=20
    ID_PART=21
    COMMENT=22
    MULTILINE_COMMENT=23
    WS=24
    FLUSH=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpockParser.StatementContext)
            else:
                return self.getTypedRuleContext(SpockParser.StatementContext,i)


        def getRuleIndex(self):
            return SpockParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SpockParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2130798) != 0):
                self.state = 32
                self.statement()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(SpockParser.DeclarationContext,0)


        def definition(self):
            return self.getTypedRuleContext(SpockParser.DefinitionContext,0)


        def assignment(self):
            return self.getTypedRuleContext(SpockParser.AssignmentContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(SpockParser.PrintStatementContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(SpockParser.WhileLoopContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(SpockParser.ReturnStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SpockParser.IfStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(SpockParser.BlockContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SpockParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.declaration()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.definition()
                pass
            elif token in [15, 21]:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.assignment()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.printStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                self.whileLoop()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 6)
                self.state = 43
                self.returnStatement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 7)
                self.state = 44
                self.ifStatement()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 8)
                self.state = 45
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(SpockParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(SpockParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = SpockParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(SpockParser.PRINT)
            self.state = 49
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(SpockParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(SpockParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = SpockParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(SpockParser.RETURN)
            self.state = 52
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(SpockParser.BEGIN, 0)

        def FINISH(self):
            return self.getToken(SpockParser.FINISH, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpockParser.StatementContext)
            else:
                return self.getTypedRuleContext(SpockParser.StatementContext,i)


        def getRuleIndex(self):
            return SpockParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SpockParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(SpockParser.BEGIN)
            self.state = 56 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 55
                self.statement()
                self.state = 58 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2130798) != 0)):
                    break

            self.state = 60
            self.match(SpockParser.FINISH)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_PART(self, i:int=None):
            if i is None:
                return self.getTokens(SpockParser.ID_PART)
            else:
                return self.getToken(SpockParser.ID_PART, i)

        def getRuleIndex(self):
            return SpockParser.RULE_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)




    def id_(self):

        localctx = SpockParser.IdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 62
                    self.match(SpockParser.ID_PART)

                else:
                    raise NoViableAltException(self)
                self.state = 65 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECLARE(self):
            return self.getToken(SpockParser.DECLARE, 0)

        def id_(self):
            return self.getTypedRuleContext(SpockParser.IdContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = SpockParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SpockParser.DECLARE)
            self.state = 68
            self.id_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(SpockParser.IdContext,0)


        def EQUALS(self):
            return self.getToken(SpockParser.EQUALS, 0)

        def expression(self):
            return self.getTypedRuleContext(SpockParser.ExpressionContext,0)


        def SET(self):
            return self.getToken(SpockParser.SET, 0)

        def AS(self):
            return self.getToken(SpockParser.AS, 0)

        def getRuleIndex(self):
            return SpockParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SpockParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.id_()
                self.state = 71
                self.match(SpockParser.EQUALS)
                self.state = 72
                self.expression()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(SpockParser.SET)
                self.state = 75
                self.id_()
                self.state = 76
                self.match(SpockParser.AS)
                self.state = 77
                self.expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(SpockParser.DEFINE, 0)

        def id_(self):
            return self.getTypedRuleContext(SpockParser.IdContext,0)


        def AS(self):
            return self.getToken(SpockParser.AS, 0)

        def expression(self):
            return self.getTypedRuleContext(SpockParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = SpockParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SpockParser.DEFINE)
            self.state = 82
            self.id_()
            self.state = 83
            self.match(SpockParser.AS)
            self.state = 84
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SpockParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(SpockParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(SpockParser.StatementContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_whileLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileLoop" ):
                return visitor.visitWhileLoop(self)
            else:
                return visitor.visitChildren(self)




    def whileLoop(self):

        localctx = SpockParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(SpockParser.WHILE)
            self.state = 87
            self.expression()
            self.state = 88
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SpockParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(SpockParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(SpockParser.StatementContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = SpockParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(SpockParser.IF)
            self.state = 91
            self.expression()
            self.state = 92
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(SpockParser.IdContext,0)


        def STRING(self):
            return self.getToken(SpockParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(SpockParser.NUMBER, 0)

        def WORD_NUMBER(self):
            return self.getToken(SpockParser.WORD_NUMBER, 0)

        def lambda_(self):
            return self.getTypedRuleContext(SpockParser.LambdaContext,0)


        def call(self):
            return self.getTypedRuleContext(SpockParser.CallContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = SpockParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.id_()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(SpockParser.STRING)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.match(SpockParser.NUMBER)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self.match(SpockParser.WORD_NUMBER)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                self.lambda_()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 99
                self.call()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LAMBDA(self):
            return self.getToken(SpockParser.LAMBDA, 0)

        def DOES(self):
            return self.getToken(SpockParser.DOES, 0)

        def block(self):
            return self.getTypedRuleContext(SpockParser.BlockContext,0)


        def TAKES(self):
            return self.getToken(SpockParser.TAKES, 0)

        def arglist(self):
            return self.getTypedRuleContext(SpockParser.ArglistContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_lambda

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLambda" ):
                listener.enterLambda(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLambda" ):
                listener.exitLambda(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambda" ):
                return visitor.visitLambda(self)
            else:
                return visitor.visitChildren(self)




    def lambda_(self):

        localctx = SpockParser.LambdaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_lambda)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(SpockParser.LAMBDA)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 103
                self.match(SpockParser.TAKES)
                self.state = 104
                self.arglist()


            self.state = 107
            self.match(SpockParser.DOES)
            self.state = 108
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALL(self):
            return self.getToken(SpockParser.CALL, 0)

        def expression(self):
            return self.getTypedRuleContext(SpockParser.ExpressionContext,0)


        def WITH(self):
            return self.getToken(SpockParser.WITH, 0)

        def list_(self):
            return self.getTypedRuleContext(SpockParser.ListContext,0)


        def getRuleIndex(self):
            return SpockParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = SpockParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(SpockParser.CALL)
            self.state = 111
            self.expression()
            self.state = 112
            self.match(SpockParser.WITH)
            self.state = 113
            self.list_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArglistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpockParser.IdContext)
            else:
                return self.getTypedRuleContext(SpockParser.IdContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SpockParser.AND)
            else:
                return self.getToken(SpockParser.AND, i)

        def getRuleIndex(self):
            return SpockParser.RULE_arglist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArglist" ):
                listener.enterArglist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArglist" ):
                listener.exitArglist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArglist" ):
                return visitor.visitArglist(self)
            else:
                return visitor.visitChildren(self)




    def arglist(self):

        localctx = SpockParser.ArglistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_arglist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.id_()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 116
                self.match(SpockParser.AND)
                self.state = 117
                self.id_()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpockParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SpockParser.ExpressionContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SpockParser.AND)
            else:
                return self.getToken(SpockParser.AND, i)

        def getRuleIndex(self):
            return SpockParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = SpockParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.expression()
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 124
                    self.match(SpockParser.AND)
                    self.state = 125
                    self.expression() 
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





